# midtry

./: CODEX_HANDOFF.md  README.md  ROADMAP.md  install.sh  midtry.md  midtry_codex.md  midtry_codex.sh  pyproject.toml  test_midtry.sh
.codex/skills/midtry/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: ALGORITHM.md  RESEARCH.md
examples/: code-debugging.md  math-problem.md  sheep-test.md
midtry/: __init__.py  cli.py
tests/: test_cli.py
